Some bugs are fixed
